--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.uw.connerjm.destinyguns" >
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -19,6 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.LoginActivity" >
+        </activity>
+        <activity android:name=".Activities.InfoActivity" >
         </activity>
     </application>
 
