--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,12 @@ android {
     }
 }
 
+repositories { mavenCentral() }
+
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     androidTestCompile fileTree(dir: 'libs', include: 'robotium-solo-5.5.2.jar')
 }
